fix background on click on mobile

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -118,3 +118,9 @@ small.required {
     outline: none;
     height: 48px;
 }
+
+label,
+button,
+a{
+    -webkit-tap-highlight-color: transparent;
+}
